force-app/main/default/objects/MailchimpFieldMapping__mdt/MailchimpFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>Mailchimp Field Mapping</label>
    <pluralLabel>Mailchimp Field Mappings</pluralLabel>
</CustomObject>