force-app/main/default/objects/MailchimpFieldMapping__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>For &quot;Use for sync&quot; fields, the default value to be assigned when creating new records.</description>
    <inlineHelpText>For &quot;Use for sync&quot; fields, the default value to be assigned when creating new records.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>