force-app/main/default/objects/MailchimpFieldMapping__mdt/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>push</fullName>
                <default>true</default>
                <label>Salesforce → Mailchimp</label>
            </value>
            <value>
                <fullName>pull</fullName>
                <label>Mailchimp → Salesforce</label>
            </value>
            <value>
                <fullName>sync</fullName>
                <label>Use for sync</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>