force-app/main/default/objects/MailchimpFieldMapping__mdt/fields/Mailchimp_Member_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Member_Attribute__c</fullName>
    <label>Mailchimp Member Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>email_address</fullName>
                <default>true</default>
                <label>email_address</label>
            </value>
            <value>
                <fullName>email_client</fullName>
            </value>
            <value>
                <fullName>email_type</fullName>
            </value>
            <value>
                <fullName>ip_opt</fullName>
            </value>
            <value>
                <fullName>ip_signup</fullName>
            </value>
            <value>
                <fullName>language</fullName>
            </value>
            <value>
                <fullName>member_rating</fullName>
            </value>
            <value>
                <fullName>source</fullName>
            </value>
            <value>
                <fullName>status</fullName>
            </value>
            <value>
                <fullName>tags_count</fullName>
            </value>
            <value>
                <fullName>timestamp_opt</fullName>
            </value>
            <value>
                <fullName>timestamp_signup</fullName>
            </value>
            <value>
                <fullName>vip</fullName>
            </value>
            <value>
                <fullName>id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>