force-app/main/default/objects/MailchimpFieldMapping__mdt/fields/Mailchimp_Merge_Field_Tag__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Merge_Field_Tag__c</fullName>
    <description>The *|MERGE|* tag to use to map this field in Mailchimp (e.g. FNAME, LNAME)</description>
    <inlineHelpText>The *|MERGE|* tag to use to map this field in Mailchimp (e.g. FNAME, LNAME)</inlineHelpText>
    <label>Mailchimp *|MERGE|* Field Tag</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>