force-app/main/default/objects/MailchimpFieldMapping__mdt/fields/Push_To_Mailchimp_As__c.field-meta.xml
<CustomField>
    <fullName>Push_To_Mailchimp_As__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Push To Mailchimp As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*|MERGE|* Field</fullName>
            </value>
            <value>
                <fullName>Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>