force-app/main/default/objects/MailchimpFieldMapping__mdt/fields/Salesforce_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_API_Name__c</fullName>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>