force-app/main/default/objects/MailchimpFieldMapping__mdt/fields/Salesforce_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_API_Name__c</fullName>
    <defaultValue>&quot;Contact&quot;</defaultValue>
    <description>The API name of the standard or custom object to map this field onto.</description>
    <inlineHelpText>The API name of the standard or custom object to map this field onto.</inlineHelpText>
    <label>Salesforce Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>